public static class PlayerConstants
{
    //player state
    public const string IDLE = "Idle";
    public const string MOVE = "Move";
    public const string JUMP = "Jump";
    public const string DASH = "Dash";
    public const string WALLSLIDE = "WallSlide";
    public const string WALLJUMP = "WallJump";

    //Player Attack
    public const string PRIMARYATTACK = "Attack";
    public const string COMBOCOUNTER = "ComboCounter";
    public const string SUCCESSFUL_COUNTER_ATTACK = "SuccessfulCounterAttack";
    public const string COUNTER_ATTACK = "CounterAttack";

    public const string AIM_SWORD = "AimSword";
    public const string CATCH_SWORD = "CatchSword";

    //input 
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";

    //jump fall y velocity
    public const string YVELOCITY = "yVelocity";

    // function names
    public const string BUSYFOR = "BusyFor";
}
